--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     />
     <title>Rehan Shop</title>
   </head>
-  <body>
+  <body background="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
